[package]
name = "mntn"
version = "3.2.0"
edition = "2024"
description = "A Rust-based command-line tool for dotfiles management with profiles."
authors = ["atrtde"]
documentation = "https://docs.rs/mntn"
repository = "https://github.com/atrtde/mntn"
homepage = "https://github.com/atrtde/mntn"
license = "GPL-3.0-or-later"
exclude = [
    "assets/*",
    ".github/*",
]

[[bin]]
name = "mntn"
path = "src/main.rs"

[dependencies]
age = "0.11.2"
anyhow = "1.0.102"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
rpassword = "7.4.0"
clap = { version = "4.5.60", features = ["derive"] }
directories-next = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
thiserror = "2.0.18"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
