[package]
name = "mntn"
version = "3.2.2"
edition = "2024"
description = "A Rust-based command-line tool for dotfiles management with profiles."
authors = ["atrtde"]
documentation = "https://docs.rs/mntn"
repository = "https://github.com/atrtde/mntn"
homepage = "https://github.com/atrtde/mntn"
license = "GPL-3.0-or-later"
exclude = ["assets/*", ".github/*"]

[[bin]]
name = "mntn"
path = "src/main.rs"

[dependencies]
age = "0.11"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rpassword = "7.4"
clap = { version = "4.5", features = ["derive"] }
directories-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
thiserror = "2.0"
keyring = "4.0"
keyring-core = "1.0"
