[package]
name = "mntn"
version = "4.0.0"
edition = "2024"
description = "A Rust-based command-line tool for dotfiles management with profiles."
authors = ["alexandretrotel"]
documentation = "https://docs.rs/mntn"
repository = "https://github.com/alexandretrotel/mntn"
homepage = "https://github.com/alexandretrotel/mntn"
license = "GPL-3.0-or-later"
exclude = ["assets/*", ".github/*"]

[[bin]]
name = "mntn"
path = "src/main.rs"

[dependencies]
age = "0.11"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rpassword = "7.4"
clap = { version = "4.5", features = ["derive"] }
directories-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
thiserror = "2.0"
keyring-core = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["rt-tokio-crypto-rust"] }
